--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,13 @@
 
 __pycache__
 debug.py
+/Scripts/
 
 # User-specific stuff:
 .idea/**/workspace.xml
 .idea/**/tasks.xml
 .idea/dictionaries
+.idea/workspace*.xml
 
 # Sensitive or high-churn files:
 .idea/**/dataSources/
