--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 __pycache__
 debug.py
 /Scripts/
+config\.json
+subtle\.log
 
 # User-specific stuff:
 .idea/**/workspace.xml
@@ -55,5 +57,3 @@ fabric.properties
 
 # VS Code
 .vscode/settings.json
-
-config\.json
