--- a/config.json.sample
+++ b/config.json.sample
@@ -1,5 +1,6 @@
 {
     "os_username": "your OpenSubtitles username",
     "os_password": "your OpenSubtitles password (will be hashed on first run)",
-    "hash": ""
+    "hash": "",
+    "debug" : "no"
 }
