--- a/config.json.sample
+++ b/config.json.sample
@@ -2,5 +2,6 @@
     "os_username": "your OpenSubtitles username",
     "os_password": "your OpenSubtitles password (will be hashed on first run)",
     "hash": "",
+    "root": "",
     "debug" : "no"
 }
